# pointer

./: .clang-format  CMakeLists.txt  pointer.hpp  test_pointer.cpp
.github/workflows/: linux.yml  macos.yml  msvc_code_analysis.yml  santizers.yml  windows.yml
examples/: 01_construction.cpp  02_usage.cpp  03_conversions.cpp  04_void_pointers.cpp  05_array_pointer_construction.cpp  06_slices.cpp  CMakeLists.txt
include/tcb/: pointer.hpp
module/: pointer.cpp
test/: CMakeLists.txt  pointer.module_import.test.cpp  pointer.test.cpp  test_pointer.cpp
tests/: CMakeLists.txt  pointer.config.hpp  pointer.module_import.test.cpp  pointer.test.cpp
